[package]
name = "solana-snapshot-etl"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/solana-snapshot-etl"
description = "Efficiently unpack Solana snapshots"
authors = ["Richard Patel <me@terorie.dev>", "Triton One"]
categories = ["cryptography::cryptocurrencies", "database"]
keywords = ["solana"]
publish = false

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.4.3", features = ["derive"] }
hashbrown = "0.15.2"
indicatif = "0.17.6"
itertools = "0.10.3"
memmap2 = "0.5.5"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.139", features = ["derive"] }
solana-frozen-abi-macro = "1.16.1"
solana-runtime = "1.16.1"
solana-sdk = "1.16.1"
tar = "0.4.38"
thiserror = "1.0.31"
toolbox = { git = "https://github.com/OliverNChalk/toolbox-rs.git", version = "0.1.0", features = [
  "tracing",
] }
tracing = "0.1.41"
zstd = "0.11.2"

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
