[package]
name = "solana-snapshot-rpc"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "Serve an RPC based on a historical account snapshot"
authors = ["Richard Patel <me@terorie.dev>", "Triton One", "Oliver Chalk"]
categories = ["cryptography::cryptocurrencies", "database"]
keywords = ["solana"]
publish = false

[package.metadata.cargo-machete]
ignored = ["jsonrpc-core-client"]

[lints.clippy]
missing_const_for_fn = "warn"
trivially_copy_pass_by_ref = "warn"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.3", features = ["derive"] }
ctrlc = "3.4.5"
hashbrown = "0.15.2"
indicatif = "0.17.6"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
memmap2 = "0.5.5"
serde = { version = "1.0.139", features = ["derive"] }
solana-account-decoder = "2.1.4"
solana-accounts-db = "2.1.4"
solana-frozen-abi-macro = "2.1.4"
solana-rpc = "2.1.4"
solana-rpc-client-api = "2.1.4"
solana-runtime = "2.1.4"
solana-sdk = "2.1.4"
toolbox = { git = "https://github.com/OliverNChalk/toolbox-rs.git", version = "0.1.0", features = ["tracing"] }
tracing = "0.1.41"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
